# acme-proxmox

./: .gitignore  README.md  makefile  pyproject.toml
containers/: bootstrap-dockerfile
jenkins/: ansible.cfg  site.yml
jenkins/platform/ansible/inventory/ci/: inventory.yaml  inventory_dev.yaml  inventory_prod.yaml
jenkins/platform/infra/: .terraform.lock.hcl  inventory.tpl  inventory.yaml  inventory_dev.yaml  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
jenkins/platform/infra/.terraform/modules/: modules.json
jenkins/platform/infra/env/dev/: tofu.tfvars
jenkins/platform/infra/env/development/: tofu.tfvars
jenkins/platform/infra/env/prod/: tofu.tfvars
jenkins/platform/infra/env/production/: tofu.tfvars
jenkins/platform/scripts/: bootstrap.sh  cleanup.sh
platform/: ansible.cfg  site.yml
platform/ansible/inventory/ci/: inventory_dev.yaml  inventory_prod.yaml
platform/ansible/inventory/ci/group_vars/: all.yaml
platform/ansible/roles/consul/tasks/: consul-acl.yaml  consul-configuration.yaml  consul-installation.yaml  consul-statefiles.yaml  main.yaml
platform/ansible/roles/consul/templates/: agent-policy.hcl.j2  agent_token.json.j2  config.json.j2  consul.service.j2  initial-config.json.j2  secured-config.json.j2  service_account_token.json.j2  statefiles-policy.hcl.j2  statefiles_policy.json.j2
platform/infra/: inventory.tpl  local.tf  main.tf  outputs.tf  variables.tf
platform/infra/env/dev/: tofu.tfvars
platform/infra/env/prod/: tofu.tfvars
platform/scripts/: bootstrap.sh  cleanup.sh  sshprobe.sh
(+27 files in other folders)
