[tool.poetry]
name = "imta"
version = "0.1.0"
description = "Scripts to run IMTA POC for platform engineering"
authors = ["Angel Castro <castrobasurto.angel@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^10.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
